Chapter 4 complete - working but not displaying like demo, just rows, no columns

--- a/lib/mango_web/templates/category/show.html.eex
+++ b/lib/mango_web/templates/category/show.html.eex
@@ -1,6 +1,6 @@
-<h1 class="page-title">Seasonal Products</h1>
+<h1 class="page-title"><%= title_case @name %></h1>
 <div class="row">
-  <%= for product <- @seasonal_products do %>
+  <%= for product <- @products do %>
     <div class="col-md-4">
       <%= render MangoWeb.ProductView, "product_card.html", product: product %>
     </div>
