--- a/lib/mango_web/templates/layout/app.html.eex
+++ b/lib/mango_web/templates/layout/app.html.eex
@@ -9,7 +9,7 @@
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
   <body>
-    <%= render "app_nav.html" %>
+    <%= render "app_nav.html", conn: @conn %>
 
   <script src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
     <main role="main" class="container">
